Agregar estructura HTML principal
En el archivo principal del sitio se agregó la estructura principal
para hacer uso de los selectores CSS definidos previamente.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Hola mundo de Git desde VSCode</h1>
+    <main id="principal">
+        <p class="negrita">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio facere ut, velit, autem, vero quo quos nemo cupiditate id doloribus veritatis. Accusantium fugiat magni nostrum at? Amet odio reprehenderit sed.
+        </p>
+    </main>
     <script src="js/app.js"></script>
 </body>
 </html>
